--- a/demos/ld1-angular-18-r1/src/index.html
+++ b/demos/ld1-angular-18-r1/src/index.html
@@ -8,7 +8,15 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+
+  <div style="padding: 20px; color: green; background-color: #e6ffe6;">
+    <app-add-emp></app-add-emp>
+  </div>
+<hr/>
+  <div style="padding: 20px; color: red; background-color: #ffe6e6;">
+    <app-root></app-root>
+  </div>
   
-  <app-add-emp></app-add-emp>
+
 </body>
 </html>
