--- a/demos/ld1-angular-18-r1/src/index.html
+++ b/demos/ld1-angular-18-r1/src/index.html
@@ -6,9 +6,16 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+></script>
 </head>
 <body>
-
+  <br><br>
+  <div class="container">
+  <h1>Our app is running successfully!</h1>
+</div>
+<div class="container">
   <div style="padding: 20px; color: green; background-color: #e6ffe6;">
     <app-add-emp></app-add-emp>
   </div>
@@ -16,7 +23,7 @@
   <div style="padding: 20px; color: red; background-color: #ffe6e6;">
     <app-root></app-root>
   </div>
-  
+  </div>
 
 </body>
 </html>
