--- a/demos/ld1-angular-18-r1/src/index.html
+++ b/demos/ld1-angular-18-r1/src/index.html
@@ -13,14 +13,14 @@
 <body>
   <br><br>
   <div class="container">
-  <h1>Our app is running successfully!</h1>
+  <h3>Our app is running successfully!</h3>
 </div>
 <div class="container">
   <div style="padding: 20px; color: green; background-color: #e6ffe6;">
     <app-add-emp></app-add-emp>
   </div>
 <hr/>
-  <div style="padding: 20px; color: red; background-color: #ffe6e6;">
+  <div style="padding: 20px; color: black; ">
     <app-root></app-root>
   </div>
   </div>
