--- a/demos/lp1b-EFicitiShopAngularSPA-NG18/src/index.html
+++ b/demos/lp1b-EFicitiShopAngularSPA-NG18/src/index.html
@@ -17,8 +17,13 @@
 
 <body>
   <app-root></app-root>
-   <!-- <form>
-    <input type="text" class="is-invalid">
-   </form> -->
+  <!-- <style>
+    .is-invalid {
+     color: red;
+    }
+  </style>
+  <form >
+   <input type="text" value="hello"  class="is-invalid form-control">
+  </form> -->
 </body>
 </html>
